compiladoresParser.py
# Generated from /home/edu/workspaces/facu/dhs/c-compiler/compiladores.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class compiladoresParser ( Parser ):

    grammarFileName = "compiladores.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'1'", "'.'", "','", "';'", "':'", "'{'", 
                     "'}'", "'('", "')'", "'['", "']'", "'\\'", "'|'", "'&'", 
                     "'%'", "'''", "'\"'", "'_'", "<INVALID>", "'int'", 
                     "'float'", "'double'", "'bool'", "'char'", "'void'", 
                     "'='", "'=='", "'!='", "'+'", "'-'", "'++'", "'--'", 
                     "'>'", "'>='", "'<'", "'<='", "'*'", "'/'", "'&&'", 
                     "'||'", "'new'", "'return'", "'break'", "'continue'", 
                     "'static'", "'true'", "'false'", "'if'", "'else'", 
                     "'while'", "'for'", "'switch'", "'default'", "'do'", 
                     "'case'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "PUNTO", "COMA", "PYC", 
                      "DOS_PUNTOS", "LLAVE_ABRE", "LLAVE_CIERRE", "PAR_ABRE", 
                      "PAR_CIERRE", "CORCH_ABRE", "CORCH_CIERRE", "BARRA_INVERSA", 
                      "BARRA_RECTA", "ANDPERSAND", "PROCENTAJE", "COMILLA_SIMPLE", 
                      "COMILLA_DOBLE", "GUION_BAJO", "WS", "INT", "FLOAT", 
                      "DOUBLE", "BOOLEAN", "CHAR", "VOID", "ASIGNACION", 
                      "IGUALDAD", "DISTINTO", "MAS", "MENOS", "SUMA_UNITARIA", 
                      "RESTA_UNITARIA", "MAYOR", "MAYOR_IGUAL", "MENOR", 
                      "MENOR_IGUAL", "ASTERISCO", "BARRA", "AND", "OR", 
                      "NEW", "RETURN", "BREAK", "CONTINUE", "STATIC", "TRUE", 
                      "FALSE", "IF", "ELSE", "WHILE", "FOR", "SWITCH", "DEFAULT", 
                      "DO", "CASE", "NUMERO", "NUMERO_DECIMAL", "ID", "TEXTO", 
                      "COMENTARIO" ]

    RULE_compiladores = 0
    RULE_statement = 1
    RULE_declaracion_variable = 2
    RULE_tipo = 3
    RULE_atributos = 4
    RULE_prototipado_funcion = 5
    RULE_lista_parametro = 6
    RULE_declaracion_funcion = 7
    RULE_asignacion_variable = 8
    RULE_bloque = 9
    RULE_return_func = 10
    RULE_condicion = 11
    RULE_bloque_if = 12
    RULE_bloque_if_else = 13
    RULE_operacion = 14
    RULE_bloque_for = 15
    RULE_bloque_while = 16
    RULE_bloque_do_while = 17
    RULE_bloque_switch = 18
    RULE_bloque_case = 19

    ruleNames =  [ "compiladores", "statement", "declaracion_variable", 
                   "tipo", "atributos", "prototipado_funcion", "lista_parametro", 
                   "declaracion_funcion", "asignacion_variable", "bloque", 
                   "return_func", "condicion", "bloque_if", "bloque_if_else", 
                   "operacion", "bloque_for", "bloque_while", "bloque_do_while", 
                   "bloque_switch", "bloque_case" ]

    EOF = Token.EOF
    T__0=1
    PUNTO=2
    COMA=3
    PYC=4
    DOS_PUNTOS=5
    LLAVE_ABRE=6
    LLAVE_CIERRE=7
    PAR_ABRE=8
    PAR_CIERRE=9
    CORCH_ABRE=10
    CORCH_CIERRE=11
    BARRA_INVERSA=12
    BARRA_RECTA=13
    ANDPERSAND=14
    PROCENTAJE=15
    COMILLA_SIMPLE=16
    COMILLA_DOBLE=17
    GUION_BAJO=18
    WS=19
    INT=20
    FLOAT=21
    DOUBLE=22
    BOOLEAN=23
    CHAR=24
    VOID=25
    ASIGNACION=26
    IGUALDAD=27
    DISTINTO=28
    MAS=29
    MENOS=30
    SUMA_UNITARIA=31
    RESTA_UNITARIA=32
    MAYOR=33
    MAYOR_IGUAL=34
    MENOR=35
    MENOR_IGUAL=36
    ASTERISCO=37
    BARRA=38
    AND=39
    OR=40
    NEW=41
    RETURN=42
    BREAK=43
    CONTINUE=44
    STATIC=45
    TRUE=46
    FALSE=47
    IF=48
    ELSE=49
    WHILE=50
    FOR=51
    SWITCH=52
    DEFAULT=53
    DO=54
    CASE=55
    NUMERO=56
    NUMERO_DECIMAL=57
    ID=58
    TEXTO=59
    COMENTARIO=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompiladoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladoresParser.StatementContext)
            else:
                return self.getTypedRuleContext(compiladoresParser.StatementContext,i)


        def getRuleIndex(self):
            return compiladoresParser.RULE_compiladores

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompiladores" ):
                listener.enterCompiladores(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompiladores" ):
                listener.exitCompiladores(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompiladores" ):
                return visitor.visitCompiladores(self)
            else:
                return visitor.visitChildren(self)




    def compiladores(self):

        localctx = compiladoresParser.CompiladoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compiladores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.statement()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.INT) | (1 << compiladoresParser.FLOAT) | (1 << compiladoresParser.BOOLEAN) | (1 << compiladoresParser.CHAR) | (1 << compiladoresParser.VOID) | (1 << compiladoresParser.IF) | (1 << compiladoresParser.WHILE) | (1 << compiladoresParser.FOR) | (1 << compiladoresParser.SWITCH) | (1 << compiladoresParser.DO) | (1 << compiladoresParser.NUMERO) | (1 << compiladoresParser.NUMERO_DECIMAL) | (1 << compiladoresParser.ID) | (1 << compiladoresParser.COMENTARIO))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion_variable(self):
            return self.getTypedRuleContext(compiladoresParser.Declaracion_variableContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def declaracion_funcion(self):
            return self.getTypedRuleContext(compiladoresParser.Declaracion_funcionContext,0)


        def asignacion_variable(self):
            return self.getTypedRuleContext(compiladoresParser.Asignacion_variableContext,0)


        def COMENTARIO(self):
            return self.getToken(compiladoresParser.COMENTARIO, 0)

        def operacion(self):
            return self.getTypedRuleContext(compiladoresParser.OperacionContext,0)


        def bloque_if(self):
            return self.getTypedRuleContext(compiladoresParser.Bloque_ifContext,0)


        def bloque_if_else(self):
            return self.getTypedRuleContext(compiladoresParser.Bloque_if_elseContext,0)


        def bloque_for(self):
            return self.getTypedRuleContext(compiladoresParser.Bloque_forContext,0)


        def bloque_while(self):
            return self.getTypedRuleContext(compiladoresParser.Bloque_whileContext,0)


        def bloque_do_while(self):
            return self.getTypedRuleContext(compiladoresParser.Bloque_do_whileContext,0)


        def bloque_switch(self):
            return self.getTypedRuleContext(compiladoresParser.Bloque_switchContext,0)


        def prototipado_funcion(self):
            return self.getTypedRuleContext(compiladoresParser.Prototipado_funcionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = compiladoresParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.declaracion_variable()
                self.state = 46
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.declaracion_funcion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.asignacion_variable()
                self.state = 50
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.match(compiladoresParser.COMENTARIO)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.operacion()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 54
                self.bloque_if()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 55
                self.bloque_if_else()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 56
                self.bloque_for()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 57
                self.bloque_while()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 58
                self.bloque_do_while()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 59
                self.bloque_switch()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 60
                self.prototipado_funcion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracion_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(compiladoresParser.TipoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def ASIGNACION(self):
            return self.getToken(compiladoresParser.ASIGNACION, 0)

        def TEXTO(self):
            return self.getToken(compiladoresParser.TEXTO, 0)

        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def NUMERO_DECIMAL(self):
            return self.getToken(compiladoresParser.NUMERO_DECIMAL, 0)

        def operacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladoresParser.OperacionContext)
            else:
                return self.getTypedRuleContext(compiladoresParser.OperacionContext,i)


        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracion_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion_variable" ):
                listener.enterDeclaracion_variable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion_variable" ):
                listener.exitDeclaracion_variable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion_variable" ):
                return visitor.visitDeclaracion_variable(self)
            else:
                return visitor.visitChildren(self)




    def declaracion_variable(self):

        localctx = compiladoresParser.Declaracion_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion_variable)
        self._la = 0 # Token type
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.tipo()
                self.state = 64
                self.match(compiladoresParser.ID)
                self.state = 65
                self.match(compiladoresParser.ASIGNACION)
                self.state = 66
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.NUMERO) | (1 << compiladoresParser.NUMERO_DECIMAL) | (1 << compiladoresParser.TEXTO))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.tipo()
                self.state = 69
                self.match(compiladoresParser.ID)
                self.state = 70
                self.match(compiladoresParser.ASIGNACION)
                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 71
                    self.operacion()
                    self.state = 74 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.NUMERO) | (1 << compiladoresParser.NUMERO_DECIMAL) | (1 << compiladoresParser.ID))) != 0)):
                        break

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.tipo()
                self.state = 77
                self.match(compiladoresParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(compiladoresParser.INT, 0)

        def FLOAT(self):
            return self.getToken(compiladoresParser.FLOAT, 0)

        def CHAR(self):
            return self.getToken(compiladoresParser.CHAR, 0)

        def BOOLEAN(self):
            return self.getToken(compiladoresParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = compiladoresParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.INT) | (1 << compiladoresParser.FLOAT) | (1 << compiladoresParser.BOOLEAN) | (1 << compiladoresParser.CHAR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtributosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(compiladoresParser.TipoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_atributos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtributos" ):
                listener.enterAtributos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtributos" ):
                listener.exitAtributos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtributos" ):
                return visitor.visitAtributos(self)
            else:
                return visitor.visitChildren(self)




    def atributos(self):

        localctx = compiladoresParser.AtributosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atributos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.tipo()
            self.state = 84
            self.match(compiladoresParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prototipado_funcionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(compiladoresParser.TipoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def PAR_ABRE(self):
            return self.getToken(compiladoresParser.PAR_ABRE, 0)

        def PAR_CIERRE(self):
            return self.getToken(compiladoresParser.PAR_CIERRE, 0)

        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def lista_parametro(self):
            return self.getTypedRuleContext(compiladoresParser.Lista_parametroContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_prototipado_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototipado_funcion" ):
                listener.enterPrototipado_funcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototipado_funcion" ):
                listener.exitPrototipado_funcion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototipado_funcion" ):
                return visitor.visitPrototipado_funcion(self)
            else:
                return visitor.visitChildren(self)




    def prototipado_funcion(self):

        localctx = compiladoresParser.Prototipado_funcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_prototipado_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.tipo()
            self.state = 87
            self.match(compiladoresParser.ID)
            self.state = 88
            self.match(compiladoresParser.PAR_ABRE)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.INT) | (1 << compiladoresParser.FLOAT) | (1 << compiladoresParser.BOOLEAN) | (1 << compiladoresParser.CHAR))) != 0):
                self.state = 89
                self.lista_parametro()


            self.state = 92
            self.match(compiladoresParser.PAR_CIERRE)
            self.state = 93
            self.match(compiladoresParser.PYC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_parametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atributos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladoresParser.AtributosContext)
            else:
                return self.getTypedRuleContext(compiladoresParser.AtributosContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.COMA)
            else:
                return self.getToken(compiladoresParser.COMA, i)

        def getRuleIndex(self):
            return compiladoresParser.RULE_lista_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_parametro" ):
                listener.enterLista_parametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_parametro" ):
                listener.exitLista_parametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista_parametro" ):
                return visitor.visitLista_parametro(self)
            else:
                return visitor.visitChildren(self)




    def lista_parametro(self):

        localctx = compiladoresParser.Lista_parametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lista_parametro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.atributos()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==compiladoresParser.COMA:
                self.state = 96
                self.match(compiladoresParser.COMA)
                self.state = 97
                self.atributos()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracion_funcionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def PAR_ABRE(self):
            return self.getToken(compiladoresParser.PAR_ABRE, 0)

        def PAR_CIERRE(self):
            return self.getToken(compiladoresParser.PAR_CIERRE, 0)

        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def tipo(self):
            return self.getTypedRuleContext(compiladoresParser.TipoContext,0)


        def VOID(self):
            return self.getToken(compiladoresParser.VOID, 0)

        def atributos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladoresParser.AtributosContext)
            else:
                return self.getTypedRuleContext(compiladoresParser.AtributosContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.COMA)
            else:
                return self.getToken(compiladoresParser.COMA, i)

        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracion_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion_funcion" ):
                listener.enterDeclaracion_funcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion_funcion" ):
                listener.exitDeclaracion_funcion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion_funcion" ):
                return visitor.visitDeclaracion_funcion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion_funcion(self):

        localctx = compiladoresParser.Declaracion_funcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracion_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladoresParser.INT, compiladoresParser.FLOAT, compiladoresParser.BOOLEAN, compiladoresParser.CHAR]:
                self.state = 103
                self.tipo()
                pass
            elif token in [compiladoresParser.VOID]:
                self.state = 104
                self.match(compiladoresParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 107
            self.match(compiladoresParser.ID)
            self.state = 108
            self.match(compiladoresParser.PAR_ABRE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.INT) | (1 << compiladoresParser.FLOAT) | (1 << compiladoresParser.BOOLEAN) | (1 << compiladoresParser.CHAR))) != 0):
                self.state = 109
                self.atributos()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==compiladoresParser.COMA:
                    self.state = 110
                    self.match(compiladoresParser.COMA)
                    self.state = 111
                    self.atributos()
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 119
            self.match(compiladoresParser.PAR_CIERRE)
            self.state = 120
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Asignacion_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.ID)
            else:
                return self.getToken(compiladoresParser.ID, i)

        def ASIGNACION(self):
            return self.getToken(compiladoresParser.ASIGNACION, 0)

        def TEXTO(self):
            return self.getToken(compiladoresParser.TEXTO, 0)

        def NUMERO(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.NUMERO)
            else:
                return self.getToken(compiladoresParser.NUMERO, i)

        def NUMERO_DECIMAL(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.NUMERO_DECIMAL)
            else:
                return self.getToken(compiladoresParser.NUMERO_DECIMAL, i)

        def MAS(self):
            return self.getToken(compiladoresParser.MAS, 0)

        def MENOS(self):
            return self.getToken(compiladoresParser.MENOS, 0)

        def ASTERISCO(self):
            return self.getToken(compiladoresParser.ASTERISCO, 0)
